make template controllable